Got localization ready for development.

--- a/LanguagePace/LanguagePace.csproj
+++ b/LanguagePace/LanguagePace.csproj
@@ -308,6 +308,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Labels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Localizations\Labels.es-MX.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
