Added IdentityRole.cs to SQL project

--- a/LanguagePace.MySQL/LanguagePace.MySQL.csproj
+++ b/LanguagePace.MySQL/LanguagePace.MySQL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityRole.cs" />
     <Compile Include="IdentityUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
