Fixed some DB stuff and added test for Create user function

--- a/LanguagePace.Tests/App.config
+++ b/LanguagePace.Tests/App.config
@@ -9,7 +9,7 @@
     </appSettings>
 
     <connectionStrings>
-
+      <add name="LanguagePaceDB" connectionString="Database=languagepace;Data Source=localhost;User Id=DBUser; Password=ThisIsPatrick382" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
