--- a/LanguagePace.Tests/LanguagePace.Tests.csproj
+++ b/LanguagePace.Tests/LanguagePace.Tests.csproj
@@ -84,6 +84,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountControllerTest.cs" />
+    <Compile Include="Controllers\AccountDataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -96,6 +98,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LanguagePace.Identity\LanguagePace.Identity.csproj">
+      <Project>{dca97d29-9ebd-4b09-b2f1-f982077dc91b}</Project>
+      <Name>LanguagePace.Identity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LanguagePace.MySQL\LanguagePace.MySQL.csproj">
+      <Project>{4fdbe0a3-5d50-4481-8412-6c4302f7c124}</Project>
+      <Name>LanguagePace.MySQL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LanguagePace.Web\LanguagePace.Web.csproj">
       <Project>{A28839C6-4C95-4924-ACDF-B5CA27E4D2BB}</Project>
       <Name>LanguagePace</Name>
