--- a/LanguagePace.Web/packages.config
+++ b/LanguagePace.Web/packages.config
@@ -39,6 +39,7 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Node.js" version="5.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Syn.Bot" version="1.1.1" targetFramework="net452" />
