Added SASS scafolding for main css

--- a/LanguagePace.Web/LanguagePace.Web.csproj
+++ b/LanguagePace.Web/LanguagePace.Web.csproj
@@ -243,11 +243,16 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\LanguagePace.css">
+      <DependentUpon>LanguagePace.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\LanguagePace.min.css">
+      <DependentUpon>LanguagePace.css</DependentUpon>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -330,6 +335,13 @@
     <Content Include="Content\bootstrap\mixins\_border-radius.scss" />
     <Content Include="Content\bootstrap\mixins\_background-variant.scss" />
     <Content Include="Content\bootstrap\mixins\_alerts.scss" />
+    <Content Include="Content\LanguagePace.scss" />
+    <Content Include="Content\LanguagePace\_variables.scss" />
+    <Content Include="Content\LanguagePace\_scaffolding.scss" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap\affix.js" />
     <Content Include="Scripts\bootstrap\alert.js" />
