--- a/LanguagePace.Web/Web.config
+++ b/LanguagePace.Web/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Database=languagepace;Data Source=localhost;User Id=DBUser; Password=ThisIsPatrick382" providerName="MySql.Data.MySqlClient" />
     <add name="LanguagePaceDB" connectionString="Database=languagepace;Data Source=localhost;User Id=DBUser; Password=ThisIsPatrick382" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
